# simple-server

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml
api/: Cargo.toml  build.rs
api/src/: lib.rs
config/simple-service/: config.yml
proto/grpc/simple_service/v1/: simple_service.proto
simple-service/: Cargo.toml
simple-service/src/: client.rs  server.rs
simple-service/src/config/: mod.rs
simple-service/src/service/: mod.rs  simple_service.rs
simple-service/src/telemetry/: mod.rs  trace.rs
