[package]
name = "simple_service"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "simple-service-server"
path = "src/server.rs"

[[bin]]
name = "simple-service-client"
path = "src/client.rs"

[dependencies]
api = { path = "../api" }

tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"

clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

tokio = { version = "1.0", features = ["full"] }

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
http = "0.2"

futures-util = "0.3"

opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17"
tracing-futures = "0.2"
